<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="hustle.selfdiabetesmgmt.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menuSettingString"
        app:showAsAction="never"/>

    <item
        android:orderInCategory="100"
        android:title="@string/menuAboutString"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_save"
        android:icon="@mipmap/ic_done_black_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

</menu>
