<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_corning"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

    <TextView
        android:id="@+id/textEditExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEditExercise"
        android:textStyle="bold"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutExercise"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/textEditExercise">

        <TextView
            android:id="@+id/textViewExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewExercise"
            />
        <EditText
            android:id="@+id/editTextExerciseDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/enterExerciseDescription"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutExerciseqty"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/linearlayoutExercise">

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDuration"/>
        <EditText
            android:id="@+id/editTextExerciseDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/enterExerciseDuration"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutExercisetime"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/linearlayoutExerciseqty">

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewTime"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickDate"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickTime"/>
    </LinearLayout>

</RelativeLayout>