<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".AddActivity">

        <CheckBox
            android:id="@+id/checkBoxDiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dietString"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkBoxExer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exerString"
            android:layout_below="@+id/checkBoxDiet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkBoxMeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medsString"
            android:layout_below="@+id/checkBoxExer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onCheckboxClicked"/>

        <EditText
            android:id="@+id/editTextDiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:textSize="35sp"
            android:hint="@string/enterDietString"
            android:layout_below="@+id/checkBoxMeds"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/editTextExer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:textSize="35sp"
            android:hint="@string/enterExerString"
            android:layout_below="@+id/editTextDiet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/editTextMeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:textSize="35sp"
            android:hint="@string/enterMedsString"
            android:layout_below="@+id/editTextExer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

</RelativeLayout>