<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="@dimen/logevent_width"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_corning_exer"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

    <TextView
        android:id="@+id/textEditExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEditExercise"
        android:textStyle="bold"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutExercise"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/textEditExercise">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewExercise"
            />
        <EditText
            android:id="@+id/editTextExerciseDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/enterExerciseDescription"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutExerciseqty"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/linearlayoutExercise">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDuration"/>
        <EditText
            android:id="@+id/editTextExerciseDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/enterExerciseDuration"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/linearlayoutExerciseqty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewTime"/>

        <EditText
            android:id="@+id/editTextDateExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="showDatePickerDialog"
            android:inputType="date"/>

        <EditText
            android:id="@+id/editTextTimeExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="showTimePickerDialog"
            android:inputType="time"/>

    </LinearLayout>

</RelativeLayout>