<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="@dimen/logevent_width"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_corning_med"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

    <TextView
        android:id="@+id/textEditMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEditMedication"
        android:textStyle="bold"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutMedication"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/textEditMedication">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewMedication"
            />
        <EditText
            android:id="@+id/editTextMedicationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/enterMedicationDescription"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/linearlayoutMedicationqty"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/linearlayoutMedication">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewQty"/>
        <EditText
            android:id="@+id/editTextMedicationQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/enterMedicationQty"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/linearlayoutMedicationqty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewTime"/>

        <EditText
            android:id="@+id/editTextDateMeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="showDatePickerDialog"
            android:inputType="date"/>

        <EditText
            android:id="@+id/editTextTimeMeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:onClick="showTimePickerDialog"
            android:inputType="time"/>

    </LinearLayout>

</RelativeLayout>