<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="team5.diabetesself_managmentapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:clickable="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="4"
        android:id="@+id/linearLayout"
        android:baselineAligned="false"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_weight="1.1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/normalRangeString"
                android:paddingBottom="10dp"
                android:textColor="#00a8ff"
                android:id="@+id/textViewNormalNotice"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/possiblyLowString"
                android:paddingBottom="10dp"
                android:textColor="#de00ff"
                android:id="@+id/textViewMediumNotice"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tooLowString"
                android:textColor="#ff0000"
                android:paddingBottom="10dp"
                android:id="@+id/textViewLowNotice"
                android:visibility="invisible"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="match_parent">
            <com.github.lzyzsd.circleprogress.ArcProgress
                app:arc_bottom_text="Average"
                app:arc_text_color="#ff5b5b"
                android:id="@+id/arc_progress"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:arc_suffix_text="mg/dL"
                app:arc_max="350"
                app:arc_bottom_text_size="15sp"
                app:arc_stroke_width="10dp"
                app:arc_unfinished_color="#ff5b5b"
                app:arc_finished_color="#5bbfff"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#009cff"
                android:layout_gravity="center"
                android:id="@+id/textViewLastEnteredTime"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1.1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tooHighString"
                android:textColor="#0cac00"
                android:paddingBottom="10dp"
                android:id="@+id/textViewHighNotice"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/veryHighString"
                android:textColor="#ff6000"
                android:id="@+id/textViewVeryHighNotice"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/callDoctorString"
                android:textColor="#ff0000"
                android:paddingTop="10dp"
                android:id="@+id/textViewDoctorNotice"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout"
        >
        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/FragmentBGL"
            android:name="team5.diabetesself_managmentapp.fragments.AddBGLFragment"
             />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/FragmentButtons"
            android:name="team5.diabetesself_managmentapp.fragments.MainButtonsFragment"
            tools:layout="@layout/main_buttons_fragment" />
    </RelativeLayout>
</RelativeLayout>